// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Journal Name Component test  should render with empty props 1`] = `<span />`;

exports[`Journal Name Component test  should render with journal article 1`] = `
<span>
  <span
    data-testid="rek-journal-name"
  >
    <a
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
    >
      <span>
        Journal of Cell Science
      </span>
    </a>
    <span
      data-testid="era-year-listed"
    >
       
      (ERA 2010 Journal(s) Listed)
    </span>
  </span>
  <span>
     
    <a
      aria-label="Check publisher's OA archiving policy in a new window"
      class="makeStyles-externalLink-1 makeStyles-externalLink-3"
      data-analyticsid="rek-journal-name-sherpa-link"
      data-testid="rek-journal-name-sherpa-link"
      href="https://example.com/"
      id="rek-journal-name-sherpa-link"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
      title="Link to https://example.com/ will open in a new window."
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-externalLinkIcon-2 css-i4bv87-MuiSvgIcon-root"
        data-testid="OpenInNewIcon"
        focusable="false"
        id="rek-journal-name-sherpa-link-new-window-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
      Check publisher's open access policy
    </a>
  </span>
</span>
`;

exports[`Journal Name Component test  should render without era journal listed 1`] = `
<span>
  <span
    data-testid="rek-journal-name"
  >
    <a
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
    >
      <span>
        Journal of Cell Science
      </span>
    </a>
  </span>
  <span>
     
    <a
      aria-label="Check publisher's OA archiving policy in a new window"
      class="makeStyles-externalLink-4 makeStyles-externalLink-6"
      data-analyticsid="rek-journal-name-sherpa-link"
      data-testid="rek-journal-name-sherpa-link"
      href="https://example.com/"
      id="rek-journal-name-sherpa-link"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
      title="Link to https://example.com/ will open in a new window."
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-externalLinkIcon-5 css-i4bv87-MuiSvgIcon-root"
        data-testid="OpenInNewIcon"
        focusable="false"
        id="rek-journal-name-sherpa-link-new-window-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
      Check publisher's open access policy
    </a>
  </span>
</span>
`;

exports[`Journal Name Component test  should render without sherpa romeo 1`] = `
<span>
  <span
    data-testid="rek-journal-name"
  >
    <a
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_journal_name%5D%5Bvalue%5D=Journal+of+Cell+Science&searchMode=advanced"
    >
      <span>
        Journal of Cell Science
      </span>
    </a>
    <span
      data-testid="era-year-listed"
    >
       
      (ERA 2010 Journal(s) Listed)
    </span>
  </span>
  <span />
</span>
`;
